--- a/intro/http-server/.cargo/config.toml
+++ b/intro/http-server/.cargo/config.toml
@@ -26,3 +26,6 @@ ESP_IDF_SDKCONFIG_DEFAULTS = { value = "./sdkconfig.defaults", relative = true }
 # ESP-IDF will be installed in ~/.espressif so it can be reused across the different examples.
 # See also https://github.com/esp-rs/esp-idf-sys#esp_idf_tools_install_dir-esp_idf_tools_install_dir
 ESP_IDF_TOOLS_INSTALL_DIR = { value = "global" }
+
+# temp, delete after PR
+CRATE_CC_NO_DEFAULTS="1"
