--- a/intro/http-server/Cargo.toml
+++ b/intro/http-server/Cargo.toml
@@ -26,3 +26,6 @@ wifi         = { path = "../../common/lib/wifi" }
 [build-dependencies]
 embuild  = "=0.31.4"
 toml-cfg = "=0.1.3"
+
+[patch.crates-io]
+cc = { git = "https://github.com/rust-lang/cc-rs" }
