--- a/intro/http-server/Cargo.toml
+++ b/intro/http-server/Cargo.toml
@@ -17,7 +17,7 @@ opt-level = "z"
 
 [dependencies]
 anyhow       = "=1.0.75"
-embedded-svc = "=0.26.4"
+embedded-svc = "0.27.1"
 esp-idf-svc  = "=0.48.1"
 shtcx        = "=0.11.0"
 toml-cfg     = "=0.1.3"
