upgrade embedded svc

--- a/intro/mqtt/exercise/Cargo.toml
+++ b/intro/mqtt/exercise/Cargo.toml
@@ -17,7 +17,7 @@ opt-level = "z"
 
 [dependencies]
 anyhow        = "=1.0.75"
-embedded-svc  = "=0.26.4"
+embedded-svc = "0.27.1"
 esp-idf-svc   = "=0.48.1"
 get-uuid      = { path = "../../../common/lib/get-uuid" }
 log           = "=0.4.20"
