--- a/advanced/button-interrupt/Cargo.toml
+++ b/advanced/button-interrupt/Cargo.toml
@@ -9,6 +9,10 @@ authors = [
 edition = "2021"
 resolver = "2"
 
+[[bin]]
+name = "button-interrupt"
+harness = false # We can't use the default rust libtest harness for a crosscompile target
+
 [profile.release]
 opt-level = "s"
 
