--- a/advanced/button-interrupt/Cargo.toml
+++ b/advanced/button-interrupt/Cargo.toml
@@ -9,6 +9,10 @@ authors = [
 edition = "2021"
 resolver = "2"
 
+[[bin]]
+name = "button-interrupt"
+harness = false # We can't use the default rust libtest harness for a crosscompile target
+
 [profile.release]
 opt-level = "s"
 
@@ -17,9 +21,9 @@ debug     = true # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [dependencies]
-anyhow      = "=1.0.75"
-esp-idf-svc = "=0.47.3"
+anyhow      = "=1.0.86"
+esp-idf-svc = "=0.49.0"
 rgb-led     = { path = "../../common/lib/rgb-led" }
 
 [build-dependencies]
-embuild = "=0.31.4"
+embuild = "=0.32.0"
