--- a/intro/hardware-check/Cargo.toml
+++ b/intro/hardware-check/Cargo.toml
@@ -8,6 +8,10 @@ authors = [
 edition = "2021"
 resolver = "2"
 
+[[bin]]
+name = "hardware-check"
+harness = false # We can't use the default rust libtest harness for a crosscompile target
+
 [profile.release]
 opt-level = "s"
 
@@ -16,13 +20,13 @@ debug     = true # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [dependencies]
-anyhow      = "=1.0.75"
-esp-idf-svc = "=0.47.3"
-log         = "=0.4.20"
+anyhow      = "=1.0.86"
+esp-idf-svc = "=0.49.0"
+log         = "=0.4.22"
 rgb-led     = { path = "../../common/lib/rgb-led" }
 toml-cfg    = "=0.1.3"
 wifi        = { path = "../../common/lib/wifi" }
 
 [build-dependencies]
-embuild  = "=0.31.4"
+embuild  = "=0.32.0"
 toml-cfg = "=0.1.3"
