--- a/intro/http-client/Cargo.toml
+++ b/intro/http-client/Cargo.toml
@@ -8,6 +8,10 @@ authors = [
 edition = "2021"
 resolver = "2"
 
+[[bin]]
+name = "http-client"
+harness = false # We can't use the default rust libtest harness for a crosscompile target
+
 [profile.release]
 opt-level = "s"
 
@@ -16,12 +20,12 @@ debug     = true # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [dependencies]
-anyhow       = "=1.0.75"
-embedded-svc = "=0.26.4"
-esp-idf-svc  = "=0.47.3"
+anyhow       = "=1.0.86"
+embedded-svc = "=0.28.0"
+esp-idf-svc  = "=0.49.0"
 toml-cfg     = "=0.1.3"
 wifi         = { path = "../../common/lib/wifi" }
 
 [build-dependencies]
-embuild  = "=0.31.4"
+embuild  = "=0.32.0"
 toml-cfg = "=0.1.3"
