--- a/intro/mqtt/exercise/Cargo.toml
+++ b/intro/mqtt/exercise/Cargo.toml
@@ -8,6 +8,10 @@ authors = [
 edition = "2021"
 resolver = "2"
 
+[[bin]]
+name = "mqtt"
+harness = false # We can't use the default rust libtest harness for a crosscompile target
+
 [profile.release]
 opt-level = "s"
 
@@ -16,17 +20,17 @@ debug     = true # Symbols are nice and they don't increase the size on Flash
 opt-level = "z"
 
 [dependencies]
-anyhow        = "=1.0.75"
-embedded-svc  = "=0.26.4"
-esp-idf-svc   = "=0.47.3"
+anyhow        = "=1.0.86"
+embedded-svc  = "=0.28.0"
+esp-idf-svc   = "=0.49.0"
 get-uuid      = { path = "../../../common/lib/get-uuid" }
-log           = "=0.4.20"
+log           = "=0.4.22"
 mqtt-messages = { path = "../../../common/lib/mqtt-messages" }
 rgb-led       = { path = "../../../common/lib/rgb-led" }
-shtcx         = "=0.11.0"
+shtcx         = "=1.0.0"
 toml-cfg      = "=0.1.3"
 wifi          = { path = "../../../common/lib/wifi" }
 
 [build-dependencies]
-embuild  = "=0.31.4"
+embuild  = "=0.32.0"
 toml-cfg = "=0.1.3"
