add cc-rs no-defaults workaround to all configs

--- a/intro/hardware-check/.cargo/config.toml
+++ b/intro/hardware-check/.cargo/config.toml
@@ -12,7 +12,7 @@ rustflags = ["--cfg", "espidf_time64", "-C", "default-linker-libraries"]
 build-std = ["std", "panic_abort"]
 
 [env]
-# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF (v5.1.2)
+# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF (v5.2.2)
 ESP_IDF_VERSION = { value = "tag:v5.2.2" }
 
 # These configurations will pick up your custom "sdkconfig.release", "sdkconfig.debug" or "sdkconfig.defaults[.*]" files
@@ -25,3 +25,5 @@ ESP_IDF_SDKCONFIG_DEFAULTS = { value = "./sdkconfig.defaults", relative = true }
 # ESP-IDF will be installed in ~/.espressif so it can be reused across the different examples.
 # See also https://github.com/esp-rs/esp-idf-sys#esp_idf_tools_install_dir-esp_idf_tools_install_dir
 ESP_IDF_TOOLS_INSTALL_DIR = { value = "global" }
+# Workaround for https://github.com/esp-rs/esp-idf-template/issues/174 
+CRATE_CC_NO_DEFAULTS = "1"
