--- a/intro/mqtt/exercise/.cargo/config.toml
+++ b/intro/mqtt/exercise/.cargo/config.toml
@@ -13,7 +13,7 @@ build-std          = ["panic_abort", "std"]
 
 
 [env]
-# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF (v5.1.2)
+# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF (v5.2.2)
 ESP_IDF_VERSION = { value = "tag:v5.2.2" }
 
 # These configurations will pick up your custom "sdkconfig.release", "sdkconfig.debug" or "sdkconfig.defaults[.*]" files
@@ -26,3 +26,5 @@ ESP_IDF_SDKCONFIG_DEFAULTS = { value = "./sdkconfig.defaults", relative = true }
 # ESP-IDF will be installed in ~/.espressif so it can be reused across the different examples.
 # See also https://github.com/esp-rs/esp-idf-sys#esp_idf_tools_install_dir-esp_idf_tools_install_dir
 ESP_IDF_TOOLS_INSTALL_DIR = { value = "global" }
+# Workaround for https://github.com/esp-rs/esp-idf-template/issues/174 
+CRATE_CC_NO_DEFAULTS = "1"
