--- a/advanced/i2c-driver/.cargo/config.toml
+++ b/advanced/i2c-driver/.cargo/config.toml
@@ -6,14 +6,14 @@ linker = "ldproxy"
 runner = "espflash flash --monitor"
 # Future - necessary for the experimental "native build" of esp-idf-sys with ESP32C3
 # See also https://github.com/ivmarkov/embuild/issues/16
-rustflags = ["--cfg", "espidf_time64", "-C", "default-linker-libraries"]
+rustflags = ["--cfg", "espidf_time64"]
 
 [unstable]
 build-std          = ["panic_abort", "std"]
 
 [env]
-# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF (v5.2.2)
-ESP_IDF_VERSION = { value = "tag:v5.2.2" }
+# Enables the esp-idf-sys "native" build feature (`cargo build --features native`) to build against ESP-IDF (v5.3.2)
+ESP_IDF_VERSION = { value = "tag:v5.3.2" }
 
 # These configurations will pick up your custom "sdkconfig.release", "sdkconfig.debug" or "sdkconfig.defaults[.*]" files
 # that you might put in the root of the project
@@ -23,7 +23,6 @@ ESP_IDF_VERSION = { value = "tag:v5.2.2" }
 #ESP_IDF_SDKCONFIG = { value = "./sdkconfig.debug", relative = true }
 ESP_IDF_SDKCONFIG_DEFAULTS = { value = "./sdkconfig.defaults", relative = true }
 # ESP-IDF will be installed in ~/.espressif so it can be reused across the different examples.
-# See also https://github.com/esp-rs/esp-idf-sys#esp_idf_tools_install_dir-esp_idf_tools_install_dir
+# See also https://github.com/esp-rs/esp-idf-sys/blob/master/BUILD-OPTIONS.md#esp_idf_tools_install_dir-esp_idf_tools_install_dir
 ESP_IDF_TOOLS_INSTALL_DIR = { value = "global" }
-# Workaround for https://github.com/esp-rs/esp-idf-template/issues/174 
-CRATE_CC_NO_DEFAULTS = "1"
+
